Update Travis again

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ install:
   - pip install pycodestyle
 # command to run tests
 script:
-  - pycodestyle Sleep_Tracker.py
+  - pycodestyle Sleep_Tracking.py
